<resources>
    <string name="app_name">hmkcopy</string>
    <string name="default_error_message">Unexpected error occurred</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_item_top_desc">Siparişinizi verin siz gelmeden hazır olsun</string>
    <string name="first_item_bottom_desc">Çıktısını almak istediğiniz belgeler için saatlerce sıra beklemenize gerek yok</string>
    <string name="second_item_top_desc">Kargaşada kaybolmayın zaman kaybetmeyin</string>
    <string name="second_item_bottom_desc">Sınav haftalarının yoğunluğunda zaman kaybetmeden hızlı ve kolayca sipariş verin</string>
    <string name="register_with_phone_number">Telefon numarasıyla kaydol</string>
    <string name="already_have_an_account">Zaten bir hesabım var</string>
    <string name="login">Giriş yap</string>
    <string name="create_new_account">Yeni hesap oluştur</string>
    <string name="privacy_policy_text"> Üye olarak UniCopy’nin <a href='"wwww.sample.com"'>Hizmet Koşullarını ve Gizlilik Politikasını</a> kabul etmiş olursunuz</string>
    <string name="register">Kayıt ol</string>
    <string name="confirm">Onayla</string>
    <string name="didnt_receive_code">Kod gelmedi mi?</string>
    <string name="check_your_message_box">Mesaj kutunu kontrol et</string>
    <string name="sms_receive_desc">Hesabınızı doğrulamanız için telefonunuza bir doğrulama kodu gönderdik.</string>
    <string name="your_account_created">Hesabınız oluşturuldu</string>
    <string name="account_created_desc">Çıktı almak istediğin dokuman için sipariş oluşturarak dilediğin baskı merkezinden sıra beklemeden teslim alabilirsin.</string>
    <string name="create_order">Sipariş oluştur</string>
    <string name="password">Şifre</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="forget_password">Şifremi unuttum</string>
    <string name="dont_worry_desc">Endişelenme! Bu sorunu hızlıca çözeceğiz.</string>
    <string name="forget_password_desc">Kayıt olurken kullandığınız telefon numaranızı yazınız.</string>
    <string name="create_new_password">Yeni şifre oluştur</string>
    <string name="new_password_desc">Ancak, kişisel hesabınızın güvenliğini sağlamak için güçlü bir parola kullanmanızı öneririz.</string>
    <string name="password_has_been_reset">Şifreniz sıfırlndı</string>
    <string name="password_has_been_reset_desc">Şifreniz başarıyla sıfırlandı ve yeniden belirlendi. Şimdi kaldığınız yerden devam edebilirsiniz.</string>
    <string name="continue_button">Devam et</string>
    <string name="reset_password">Sıfırla</string>
    <string name="documents">Dökümanlarım</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="ite_background_desc">ite background desc</string>
    <string name="main_bottom_bar_icon">main bottom bar icon</string>
    <string name="upload_date">Yüklenme Tarihi</string>
    <string name="double_dot">:</string>
    <string name="page_count">Sayfa sayısı</string>
    <string name="document_category">Tür</string>
    <string name="document_item_folder">document item folder</string>
    <string name="download_note">Notu indir</string>
    <string name="document_id">Döküman no</string>
    <string name="choose_document">Dokümanı seç</string>
    <string name="give_order">Baskıya gönder</string>
    <string name="show_in_map">Haritada göster</string>
    <string name="notification_settings">Bildirim Ayarları</string>
    <string name="username">Kullanıcı adı</string>
    <string name="mail_address">Email adresi</string>
    <string name="phone_number">Telefon numarası</string>
    <string name="profile_settings">Profil Ayarları</string>
    <string name="user_info">Kullanıcı bilgileri</string>
    <string name="mail_settings">Eposta ayarları</string>
    <string name="password_settings">Şifre ayarları</string>
    <string name="about_unicopy">UniCopy Hakkında</string>
    <string name="support">Destek</string>
    <string name="user_agreement">Kullanıcı sözleşmesi</string>
    <string name="exit">Çıkış yap</string>
    <string name="update">Güncelle</string>
    <string name="current_mail">Geçerli eposta adresi</string>
    <string name="new_mail">Yeni eposta adresi</string>
    <string name="new_mail_repeat">Yeni eposta adresi tekrar</string>
    <string name="current_pass">Geçerli şifre</string>
    <string name="new_password">Yeni şifre</string>
    <string name="new_password_repeat">Yeni şifre tekrar</string>
    <string name="all_app_permissions">Tüm uygulama bildirimleri</string>
    <string name="lorem">Lorem ipum</string>
    <string name="user_agreement_text">Lorem ipsum dolor sit amet consectetur. Ac in congue vitae proin imperdiet adipiscing aliquet adipiscing. Nulla consequat ac nunc nulla integer aenean consequat tortor a. Et vitae blandit feugiat semper vitae cursus ut iaculis cursus. Non aliquet cras mauris cursus volutpat vulputate a amet sit. Et fringilla ac nibh sodales sit. Eget dictum elementum fermentum nulla nunc nisl amet. Facilisi ultricies tincidunt ut vestibulum tellus. Sit commodo vel duis sed neque fermentum at. Tristique tincidunt egestas accumsan lectus phasellus viverra nisi congue. Felis varius placerat a eget id ac enim a. Auctor mus aliquet cursus quis. Quis neque rhoncus eleifend sit natoque. Est amet sit pharetra sapien sit interdum pretium. Sed suspendisse nullam sagittis turpis integer enim. Etiam scelerisque blandit pharetra vel a aliquet. Ac molestie.</string>
    <string name="document_upload">Dosya Yukle</string>
    <string name="choose">Seç</string>
    <string name="upload_date_with_two_dots">Sipariş tarihi : </string>
    <string name="show_note">Notu Görüntüle</string>
    <string name="choose_print_settings">Baskı Seçeneklerini Belirle</string>
    <string name="total">Toplam</string>
    <string name="kdv_string">% 18 KDV Dahil</string>
    <string name="confirm_order_privacy_policy"><a href='"wwww.sample.com"'>Mesafeli satış sözleşme</a> koşullarını okudum ve kabul ediyorum</string>
    <string name="payment_successful_title">SİPARİŞİNİZ BAŞARIYLA ALINDI</string>
    <string name="payment_successful_desc">Ödemeniz için teşekkürler. Siparişiniz başarıyla tamamlandı. Baskı süreciyle ilgili bilgilere Siparişlerim menüs ünden takip edebilirsiniz</string>
    <string name="payment_error_desc">Ödeme yönetimiyle ilgili bir sorun oluştu. Bankanızdan tahsilat gerçekleştirilemedi. Ödeme yöntemini yeniden deneyebilir ya da başka bir kart bilgisi ile siparişi tamamlayabilirsiniz.</string>
    <string name="payment_error_title">ÖDEME BAŞARISIZ OLDU</string>
    <string name="credit_card_infos">KREDİ KART BİLGİLERİ</string>
    <string name="name_on_credit_card">Kart üzerindeki isim</string>
    <string name="card_number">Kart numarası</string>
    <string name="exp_date_card">Son kullanım tarihi</string>
    <string name="card_ccv">CCV</string>
    <string name="sumbit_payment">Ödemeyi Tamamla</string>
    <string name="order_date">Sipariş tarihi : </string>
    <string name="try_again">Yeniden Dene</string>
    <string name="info_button_text">Toplam tutar belirlediğiniz baskı seçeneklerine göre değişkenlik göstermektedir</string>
    <string name="add_note_hint_text">Siparişinizle ilgili eklemek istediğiniz notu buradan iletebilirsiniz</string>
</resources>