<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.payment.PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_card_background">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/credit_card_infos"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/name_on_credit_card"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/payment_card_name_surname"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/card_number"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/payment_card_number"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingStart="8dp"
                android:maxLength="19"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/exp_date_card"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/payment_exp_date"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingStart="8dp"
                android:maxLength="5"
                android:hint="MM/YY"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/card_ccv"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/payment_ccv"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:maxLength="3"
                android:paddingStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_background"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/submit_payment"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="134dp"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_button_background_blue"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_forget_password_button"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sumbit_payment"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </FrameLayout>

</FrameLayout>