<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.authentication.RegisterNamePassFragment">


    <TextView
        android:id="@+id/mail_pass_create_new_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_black"
        android:layout_marginTop="110dp"
        android:layout_marginStart="32dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_name_pass_layout"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/ic_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_pass_create_new_account_text">

        <ImageView
            android:id="@+id/name_surname_edittext_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_profile"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_name_surname_input"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:textColor="@color/black"
            android:hint="@string/name_surname"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_surname_edittext_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_password_layout"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name_pass_layout">

        <ImageView
            android:id="@+id/lock_edittext_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_lock"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_password_input"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lock_edittext_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/register_name_surname_continue_button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/custom_phone_button_background"
        app:layout_constraintBottom_toTopOf="@+id/register_name_surname_privacy_policy_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_layout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/register"
            android:textColor="@color/white" />
    </FrameLayout>

    <TextView
        android:id="@+id/register_name_surname_privacy_policy_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:text="@string/privacy_policy_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>